--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=8747
 JWT_KEY="jainil-secret-key"
-ORIGIN="http://localhost:5173"
+ORIGIN="https://chat-app-js-omega.vercel.app"
 DATABSE_URL="mongodb+srv://admin-user:obd6t4fhrRjeySrb@cluster0.sbtjzja.mongodb.net/my-chat-db"
